--- a/MyFriends/Views/Home/Details.cshtml
+++ b/MyFriends/Views/Home/Details.cshtml
@@ -39,7 +39,28 @@
 </div>
 <hr />
 <button onclick="addImage()">הוסף תמונה לחבר</button>
-<div id="addImageId" style="display:none">Form for adding new image</div>
+<div id="addImageId" style="display:none">
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="AddNewImage" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <input asp-for="Id" hidden="hidden" />
+
+                <div class="form-group">
+                    <label asp-for="SetImage" class="control-label"></label>
+                    <input type="file" asp-for="SetImage" class="form-control" />
+                    <span asp-validation-for="SetImage" class="text-danger"></span>
+                </div>
+                
+                <div class="form-group">
+                    <input type="submit" value="הוסף" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+    
+</div>
 <div>
     @Html.ActionLink("Edit", "Edit", new {  id = Model.Id }) |
     <a asp-action="Friends">בחזרה לרשימת החברים</a>
